# sagittarius

./: .env.example  .gitignore  Cargo.toml
api/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
api/src/: main.rs  models.rs  routes.rs
api/src/templates/: dashboard.html
script/: .gitignore  Cargo.toml  README.md
script/src/: main.rs
src/: main.rs
