[package]
name = "sagittarius-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
dotenv = "0.15"
env_logger = "0.11"
actix-cors = "0.7.1"

[profile.release]
opt-level = 3
lto = true
strip = true
